feat: unique constraints for property name+address
